# ThunderLaunch

./: .env.local.example  .gitignore  Anchor.toml  DEPENDENCIES.md  ENVIRONMENT.md  README.md  SETUP_GUIDE.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
docs/: REALTIME_FEATURES.md  TOAST_NOTIFICATIONS.md  TRADING_IMPLEMENTATION.md  USER_PROFILES.md  WATCHLIST.md
patches/@solana-mobile/wallet-adapter-mobile/: index.js  package.json
patches/bigint-buffer/: index.d.ts  index.js  package.json
programs/plp/: Cargo.toml
programs/plp/src/: lib.rs
sql/: schema.sql
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
src/app/launch/: layout.tsx  page.tsx
src/app/tokens/: page.tsx
src/app/watchlist/: page.tsx
src/components/: README.md
src/components/layout/: Container.tsx  Footer.tsx  Header.tsx  index.ts
src/components/providers/: WalletProvider.tsx  index.ts
src/components/security/: SecurityBadge.tsx  SecurityReport.tsx  SecurityWarning.tsx  index.ts
src/components/token/: LiveFeed.tsx  PriceChart.tsx  TRADING_COMPONENTS.md  TokenCard.tsx  TokenCreationForm.tsx  (+7 more)
src/config/: README.md  chains.ts  constants.ts  env.ts  site.ts
src/hooks/: README.md  index.ts  useNotifications.ts  useRealtimeTokens.ts  useRealtimeTrades.ts  useSecurityCheck.ts  useWalletBalance.ts  useWatchlist.ts
src/lib/: README.md  utils.ts
src/types/: README.md  index.ts  security.ts  token.ts  trade.ts  user.ts
tests/: plp.ts  setup.ts
tests/unit/: bondingCurve.test.ts  validation.test.ts
(+59 files in other folders)
